Task-CreateHelmChart-privateDockerRegistry/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  selector:
    app: registry
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
