Task-CreateHelmChart-privateDockerRegistry/registry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"  

spec:
  rules:
  - host: naman.training.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: registry
            port:
              number: 80

  tls:
      - hosts:
          - naman.training.app
        secretName: my-tls-secret
